# DALIA-dashboard

./: README.md  app.py  pyproject.toml  requirements.txt
dalia_dashboard/: app.py  dps.py  map.py  plot.py  sidebar.py
data/: DPS1 - Hungary Sziegetköz.csv  DPS2 - Bergheim-Ingolstadt.csv  DPS3 - Dyje-Thaya.csv  DPS4 - Zilna.csv  DPS5 - Begečka Jama.csv  DPS6 - Iron Gates.csv  DPS7 - Danube Delta.csv  DPS8 - Bodrog River Basin.csv  DPS9 - Crisuri Water Basin.csv
tests/: test_graph.py
