[project]
name = "dalia-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Eager Tom",email = "thomas.eldridge@meteoblue.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium (>=0.19.5,<0.20.0)",
    "streamlit-folium (>=0.24.0,<0.25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

